2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.cpp (GdbServer::rspAttach): Respect
	--dont-halt-on-attach in non-stop mode, ignore it in all-stop mode.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.cpp (GdbServer::rspServer): Call
	detachAllProcesses when client disconnects.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.cpp (GdbServer::detachProcess): Resume all threads
	in process, even if it's DEFAULT_PROCESS.

2016-11-14  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.h <IDLE_PID>: Rename from ...
	<DEFAULT_PID>: ... to this.

2016-10-31  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.cpp (GdbServer::rspVpkt): Defer 'vCtrlC' packet to
	rspVCtrlC.
	(GdbServer::rspVCtrlC): Added. Handle 'VCtrlC' packet.
	* e-server/src/GdbServer.h (GdbServer) <rspVCtrlC>: Add prototype.

2016-10-28  Ola Jeppsson  <ola@adapteva.com>

	* src/TargetControl.h (TargetControl::STATUS_EXCAUSE_SWI): Added.
	(TargetControl::STATUS_EXCAUSE_UNALIGNED): Added.
	(TargetControl::STATUS_EXCAUSE_ILLEGAL): Added.
	(TargetControl::STATUS_EXCAUSE_FPU): Use Epiphany-III exception
	number.
	(TargetControl::STATUS_EXCAUSE_UNIMPL): Ditto.
	(TargetControl::STATUS_EXCAUSE_LDST): Remove.
	(TargetControl::STATUS_EXCAUSE_LSTALL): Remove.
	(TargetControl::STATUS_EXCAUSE_FSTALL): Remove.
	* src/Thread.cpp (Thread::getException): Remove.
	STATUS_EXCAUSE_LDST case. Add STATUS_EXCAUSE_UNALIGNED and
	STATUS_EXCAUSE_ILLEGAL cases.

2016-10-27  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.h (GdbServer::vContTidAction::matches): Add
	missing return path.

2016-06-23  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.cpp (GdbServer::findStopReason): Validate PC before
	trying to read its memory contents.
	* src/TargetControl.cpp (TargetControl::isValidAddr): Implemented.
	* src/TargetControl.h (TargetControl::isExternalMem): Add virtual
	function.
	(TargetControl::isCoreMem): Add virtual function.
	(TargetControl::isValidAddr): Add virtual function.